moodle-demo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle
  labels:
    app: moodle
spec:
  selector:
    matchLabels:
      app: moodle
  replicas: 2
  template:
    metadata:
      labels:
        app: moodle
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: moodle
        image: bitnami/moodle:latest
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: moodle-storage
          mountPath: /bitnami/moodle
      volumes:
      - name: moodle-storage
        persistentVolumeClaim:
          claimName: moodle-pvc
